# textindiagrams

./: .gitignore  README.md  download_data.sh  engine.py  environment.yml  evaluate.py  evaluate_class.py  finetuning.py  pretraining.py  pyproject.toml
config/: finetuning.py  finetuningk4.py  from_scratch.py  latin_19class.py  latin_20class.py  pretraining.py  pretrainingk4.py
datasets/: EIDA.py  EIDALatin.py  MTHv2.py  READ.py  __init__.py  cbdar2019.py  coco.py  icdar19chinese.py  synthetic_diagram.py  synthetic_doc.py  transforms.py  utils.py
models/dino/: deformable_transformer.py  dino.py  dn_components.py  utils.py
models/dino/cuda_op/: cuda_utils.h
notebook/: detection_evaluation.ipynb  detection_evaluation_latin.ipynb  script_evaluation_map.json  stats.ipynb
scripts/: finetuning.sh  finetuningk4.sh  from_scratch.sh  latin_finetuning.sh  latin_from_scratch.sh  latin_pretraining.sh  pretraining.sh  pretrainingk4.sh
synthetic/: __init__.py  document.py  element.py  line.py  setup.py
synthetic/synthetic_module/: __init__.py  background.py  diagram.py  element.py  synthetic.py
synthetic/synthetic_module/helper/: noise.py  resources.py  text.py
synthetic/utils/: __init__.py  path.py
util/: box_ops.py
