[project]
name = "textindiagrams"
version = "0.1.0"
description = "Environment for Text Region Detection in Historical Astronomical Diagrams."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "addict>=2.4.0",
    "click>=8.3.1",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "matplotlib==3.10.0",
    "notebook>=7.5.0",
    "numpy<2",
    "opencv-python==4.11.0.86",
    "panopticapi",
    "pillow==9.5.0",
    "pycocotools==2.0.8",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "scikit-image==0.24.0",
    "scikit-learn==1.7.0",
    "scipy==1.15.2",
    "tensorboard>=2.20.0",
    "timm==1.0.14",
    "tqdm>=4.65",
    "wandb>=0.23.0",
    "yapf==0.40.1",
    # I recommend adding these specifically to ensure they are pulled
    "torch==2.1.0",
    "torchvision==0.16.0",
    "torchaudio==2.1.0",
    "termcolor>=3.2.0",
    "shapely>=2.1.2",
    "gdown>=6.1.0",
]

[tool.uv]
# THIS IS THE FIX:
# It tells uv to verify versions on PyPI even if found in the PyTorch index.
index-strategy = "unsafe-best-match"

[tool.uv.sources]
panopticapi = { git = "https://github.com/cocodataset/panopticapi.git", rev = "7bb4655548f98f3fedc07bf37e9040a992b054b0" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = false
